kubernetes/frontend/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelease-frontend
  labels:
  travelease.io/name: travelease-frontend
  app.kubernetes.io/instance: travelease-deploy
  app.kubernetes.io/name: travelease-frontend
  app.kubernetes.io/part-of: travelease-deploy
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      travelease.io/name: travelease-frontend
  template:
    metadata:
      labels:
        travelease.io/name: travelease-frontend  
        app.kubernetes.io/instance: travelease-deploy
        app.kubernetes.io/component: frontendproxy
        app.kubernetes.io/name: travelease-frontend

    spec:
      serviceAccountName: travelease-deploy   
      containers:
        - name: travelease-frontend
          image: 794038217891.dkr.ecr.ap-south-1.amazonaws.com/travelease/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: service
